fixing overlap problem with the footer.

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -50,8 +50,11 @@ footer.bk-main {
   text-align: center;
   width: 100%;
   position: absolute;
-  bottom: 10px;
+  bottom: 15px;
   font-size: 65%;
+}
+.bk-content {
+  padding-bottom: 40px;
 }
 /* Specific Pages */
 /* Table of Contents */
